# ai-research-system

./: .env.template  .gitignore  QUICK_START.md  README.md  WHATS_BUILT.md  pyproject.toml
.github/: SETUP_CLOUD.md
.github/workflows/: test-system.yml
scripts/: test_agent1.py  test_agent2.py
src/research_system/: __init__.py
src/research_system/agents/: base_agent.py  experiment_design.py  experiment_execution.py  hypothesis_formation.py  idea_generation.py  literature_review.py  results_analysis.py
src/research_system/config/: settings.py
src/research_system/integrations/: mcp_knowledge_graph.py  obsidian_client.py  semantic_scholar.py
src/research_system/services/: cost_tracker.py
src/research_system/storage/: database.py
src/research_system/storage/migrations/: 001_add_hypothesis_tables.sql
src/research_system/workflows/: research_workflow.py
tests/: test_end_to_end_workflow.py
